# char-kp

./: Dockerfile  docker-compose.yml  downlaod_dataset.py  mypy.ini  pyproject.toml
char_kp/: config.py  data.py  train.py
tests/: test_data.py
